исправлены примеры когфигурационных файлов в config/

--- a/config/pages.example
+++ b/config/pages.example
@@ -12,13 +12,6 @@
 #icon =
 
 
-
 [Главная]
 path = /
-template = welcome.html
-album_photos = 02
-
-#[Тест-родитель]
-
-#[Тест1]
-#parent = Тест-родитель
+template = home.html
